fix ci/cd WE NEVER GIVE UP?&

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -32,11 +32,11 @@ jobs:
       run: |
         # Clone Crow framework since it's a nested repo without .gitmodules
         if [ ! -d "Crow" ]; then
-          git clone https://github.com/CrowCpp/Crow.git Crow
+          git clone --depth 1 https://github.com/CrowCpp/Crow.git Crow
         fi
-        # CMake expects Crow at ../Crow/include relative to build dir
-        mkdir -p ../Crow/include
-        cp -r Crow/include/* ../Crow/include/
+        # List Crow directory to debug structure
+        ls -la Crow/
+        ls -la Crow/include/ 2>/dev/null || echo "No include dir"
     
     - name: Configure and build
       run: |
